# dde-top-panel

./: .gitignore  CMakeLists.txt  README.md  dde-top-panel.desktop  deb.cmake  readme.md
appmenu/: CMakeLists.txt  appmenumodel.cpp  appmenumodel.h  config-X11.h  dbusmenu_interface.cpp  dbusmenu_interface.h  dbusmenuimporter.cpp  menuimporter.cpp  menuimporter.h  menuimporteradaptor.cpp  menuimporteradaptor.h
debian/doc/: changelog  copyright
debian/scripts/: postinst  postrm
frame/: CMakeLists.txt  frame.qrc  main.cpp
frame/controller/: dockitemmanager.cpp  dockitemmanager.h  dockpluginscontroller.cpp  dockpluginscontroller.h
frame/dbus/: com.deepin.dde.daemon.Dock.xml  dbusclientmanager.cpp  dbusclientmanager.h  dbusdisplay.cpp  dbusdisplay.h  dbusdockadaptors.cpp  dbusdockadaptors.h  dbusmenu.cpp  dbusmenu.h  dbusmenumanager.cpp  dbusmenumanager.h  dde-dock-ClientManager.xml  dde-dock-entry-v1.xml
frame/dbus/sni/: statusnotifierwatcher_interface.cpp  statusnotifierwatcher_interface.h
frame/interfaces/: constants.h  pluginproxyinterface.h  pluginsiteminterface.h
frame/item/: appitem.cpp  appitem.h  dockitem.cpp  dockitem.h  item.qrc  placeholderitem.cpp  placeholderitem.h  pluginsitem.cpp  pluginsitem.h  traypluginitem.cpp  traypluginitem.h
frame/item/components/: appdrag.cpp  appdrag.h  appdragwidget.cpp  appdragwidget.h  appsnapshot.cpp  appsnapshot.h  appspreviewprovider.h  appswingeffectbuilder.h  floatingpreview.cpp  floatingpreview.h  hoverhighlighteffect.cpp  hoverhighlighteffect.h  previewcontainer.cpp  previewcontainer.h
frame/panel/: MainPanelControl.cpp  MainPanelControl.h
frame/qss/: frame.qss
frame/util/: CustomSettings.cpp  CustomSettings.h  TopPanelSettings.cpp  TopPanelSettings.h  XUtils.cpp  XUtils.h  abstractpluginscontroller.cpp  abstractpluginscontroller.h  dockpopupwindow.cpp  dockpopupwindow.h  docksettings.cpp  docksettings.h  imagefactory.cpp  imagefactory.h  imageutil.cpp  imageutil.h  pluginloader.cpp  pluginloader.h  themeappicon.cpp  themeappicon.h  utils.h
frame/widgets/: tipswidget.h
frame/window/: MainWindow.cpp  MainWindow.h
frame/xcb/: xcb_misc.cpp  xcb_misc.h
interfaces/: constants.h  pluginsiteminterface.h
plugins/: CMakeLists.txt
plugins/tray/: CMakeLists.txt  abstracttraywidget.cpp  abstracttraywidget.h  indicatortray.cpp  indicatortray.h  indicatortraywidget.cpp  indicatortraywidget.h  snitraywidget.cpp  snitraywidget.h  tray.json  tray.qrc  trayplugin.cpp  trayplugin.h  xembedtraywidget.cpp  xembedtraywidget.h
plugins/tray/fashiontray/: fashiontrayconstants.h  fashiontraycontrolwidget.cpp  fashiontraycontrolwidget.h  fashiontrayitem.cpp  fashiontrayitem.h  fashiontraywidgetwrapper.cpp  fashiontraywidgetwrapper.h
plugins/tray/fashiontray/containers/: abstractcontainer.cpp  abstractcontainer.h  attentioncontainer.cpp  attentioncontainer.h  holdcontainer.cpp  holdcontainer.h  normalcontainer.cpp  normalcontainer.h  spliteranimated.cpp  spliteranimated.h
plugins/tray/system-trays/: systemtrayitem.cpp  systemtrayitem.h  systemtrayscontroller.cpp  systemtrayscontroller.h
schemas/: com.deepin.dde.toppanel.gschema.xml
translations/: dde-top-panel_zh_CN.ts
widgets/: ActiveWindowControlWidget.cpp  ActiveWindowControlWidget.h  DBusTopPanelService.cpp  DBusTopPanelService.h  MyProxyClass.h  QClickableLabel.cpp  QClickableLabel.h  QOperationWidget.cpp  QOperationWidget.h  mainsettingwidget.cpp  mainsettingwidget.h  mainsettingwidget.ui  tipswidget.cpp
xml/: com.deepin.dde-grand-search.dde-top-panel-setting.conf  com.septemberhx.dde.TopPanel.xml
